--- a/index.html
+++ b/index.html
@@ -209,25 +209,25 @@
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Division 2</h3>
+                                        <h3>Deep Rock Galactic</h3>
                                         <h3>05:00 CST</h3>
-                                        <div> Thursday, November 19 </div>
+                                        <div> Thursday, November 26 </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Division 2</h3>
+                                        <h3>Destiny 2</h3>
                                         <h3>05:00 CST</h3>
-                                        <div> Friday, Novemeber 20 </div>
+                                        <div> Friday, November 27 </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Division 2 & Fallout 76</h3>
+                                        <h3>Destiny 2 & Deep Rock Galactic</h3>
                                         <h3>08:00 CST</h3>
-                                        <div> Weekend, November 21-22 </div>
+                                        <div> Weekend, November 28-29 </div>
                                     </div>
                                 </div>
                             </div>
