--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Destiny 2 & Deep Rock Galactic</h3>
+                                        <h3>Destiny 2 & Deep Rock</h3>
                                         <h3>08:00 CST</h3>
                                         <div> Weekend, November 28-29 </div>
                                     </div>
