--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
+                            <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%69%6E%66%6F%40%63%6C%61%73%73%69%63%63%61%6C%65%62%2E%70%72%6F"> Contact </a>"> Specs <span class="label"></span>
+                                <span class="label">email</span>
+                            </a>
+                        </li>
+                        <li class=" dropdown dropdown-hover">
                             <a href="https://pcpartpicker.com/user/classiccaleb/saved/#view=dZLgbv"> Specs <span class="label"></span>
                                 <span class="label">parts</span>
                             </a>
