--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>ClassicCaleb | Casual Friendly Gaming and Tech</title>
-        <meta name="twitter:card" content="summary" />
-        <meta name="twitter:site" content="@classiccalebtv" />
-        <meta name="twitter:creator" content="@classiccalebtv" />
-        <meta property="og:url" content="https://classiccaleb.pro" />
-        <meta property="og:description" content="Casual Friendly Gaming and Tech" />
-        <meta property="og:title" content="Hi, I'm ClassicCaleb" />
-        <meta property="og:image" content="https://raw.githubusercontent.com/crankycaleb/crankycaleb.github.io/main/assets/images/yttwitcard.jpg" />
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@ClassicCalebTV">
+        <meta name="twitter:title" content="ClassicCaleb | Casual Friendly Gaming and Tech">
+        <meta name="twitter:description" content="I started making content because of an interest in geeking out with streaming technology and gaming. I continue because of the amazing people that come together!">
+        <meta name="twitter:image" content="https://raw.githubusercontent.com/crankycaleb/crankycaleb.github.io/main/assets/images/twitcardLRG.png">
+        <meta name="twitter:creator" content="@classiccalebtv">
         <meta name="description" content="ClassicCaleb | Casual Friendly Gaming and Tech">
         <meta name="keywords" content="gaming, game, community, template, html, bootstrap, webpack">
         <meta name="author" content="ClassicCaleb">
