--- a/tip.html
+++ b/tip.html
@@ -142,6 +142,12 @@
                                 <h3>If you see someone crying, ask if it's because of their haircut.</h3>
                                     <div class="youplay-input">
                                     </div>
+                                <div class="info container align-center">
+                    <div>
+                        <h2>Ok fine seriously, here's the real button</h2><br><br>
+                        <a class="btn btn-info" href="https://streamlabs.com/classiccalebplays/tip">Tip</a>
+                    </div>
+                </div>
                                 </form>
                             </div>
                         </div>
