--- a/tip.html
+++ b/tip.html
@@ -144,7 +144,7 @@
                                     </div>
                                 <div class="info container align-center">
                     <div>
-                        <h2>Ok fine seriously, here's the real button</h2><br><br>
+                        <h2>Ok fine, here's the real button</h2><br><br>
                         <a class="btn btn-info" href="https://streamlabs.com/classiccalebplays/tip">Tip</a>
                     </div>
                 </div>
