--- a/index.html
+++ b/index.html
@@ -230,25 +230,25 @@
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Deep Rock Galactic</h3>
-                                        <h3>05:00 CST</h3>
-                                        <div> Thursday, November 26 </div>
-                                    </div>
-                                </div>
-                                <div class="col-sm-4">
-                                    <div class="feature angled-bg">
-                                        <i class="fa fa-clock"></i>
                                         <h3>Destiny 2</h3>
                                         <h3>05:00 CST</h3>
-                                        <div> Friday, November 27 </div>
+                                        <div> Thursday, December 3 </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Destiny 2 & Deep Rock</h3>
+                                        <h3>ESO</h3>
+                                        <h3>05:00 CST</h3>
+                                        <div> Friday, December 4 </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="feature angled-bg">
+                                        <i class="fa fa-clock"></i>
+                                        <h3>Destiny 2 & ESO</h3>
                                         <h3>08:00 CST</h3>
-                                        <div> Weekend, November 28-29 </div>
+                                        <div> Weekend, December 5-6 </div>
                                     </div>
                                 </div>
                             </div>
