--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@
                 <div class="info container align-center">
                     <div>
                         <h2>Thanks for your support!</h2>
-                        <em class="date">Tips are never expected, but on rare occasions generous people ask me for a link.</a></em>
+                        <em class="date">Never expected, always appreciated! You can now subscribe on Patreon for $3!</a></em>
                         <br><br><br><br>
-                        <a class="btn btn-info" href="tip.html">Tip</a>
+                        <a class="btn btn-info" href="https://www.patreon.com/ClassicCaleb">Patreon</a>
                     </div>
                 </div>
             </section>
