--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
+                            <a href="https://www.patreon.com/ClassicCaleb"> Patreon <span class="label"></span>
+                                <span class="label">parts</span>
+                            </a>
+                        </li>
+                        <li class=" dropdown dropdown-hover">
                             <a href="https://pcpartpicker.com/user/classiccaleb/saved/#view=dZLgbv"> Specs <span class="label"></span>
                                 <span class="label">parts</span>
                             </a>
