--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         </li>
                         <li class=" dropdown dropdown-hover">
                             <a href="https://www.patreon.com/ClassicCaleb"> Patreon <span class="label"></span>
-                                <span class="label">parts</span>
+                                <span class="label">support</span>
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
