--- a/index.html
+++ b/index.html
@@ -235,25 +235,25 @@
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Destiny 2</h3>
+                                        <h3>Division 2</h3>
                                         <h3>05:00 CST</h3>
-                                        <div> Thursday, December 3 </div>
+                                        <div> Thursday, December 10 </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>ESO</h3>
+                                        <h3>Division 2</h3>
                                         <h3>05:00 CST</h3>
-                                        <div> Friday, December 4 </div>
+                                        <div> Friday, December 11 </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Destiny 2 & ESO</h3>
+                                        <h3>Division 2 & Fallout 76</h3>
                                         <h3>08:00 CST</h3>
-                                        <div> Weekend, December 5-6 </div>
+                                        <div> Weekend, December 12-13 </div>
                                     </div>
                                 </div>
                             </div>
