--- a/index.html
+++ b/index.html
@@ -235,17 +235,17 @@
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Fallout 4</h3>
-                                        <h3>06:00 CST</h3>
-                                        <div> Thursday, December 24 </div>
+                                        <h3>Division 2</h3>
+                                        <h3>08:00 CST</h3>
+                                        <div> Thursday, December 31 </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
                                         <h3>Fallout 4</h3>
-                                        <h3>06:00 CST</h3>
-                                        <div> Friday, December 25 </div>
+                                        <h3>05:00 CST</h3>
+                                        <div> Friday, Jan 1 </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
@@ -253,7 +253,7 @@
                                         <i class="fa fa-clock"></i>
                                         <h3>Fallout 4</h3>
                                         <h3>08:00 CST</h3>
-                                        <div> Weekend, December 26-27 </div>
+                                        <div> Weekend, Jan 2-3 </div>
                                     </div>
                                 </div>
                             </div>
