--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Division 2</h3>
+                                        <h3>Fallout 4</h3>
                                         <h3>08:00 CST</h3>
                                         <div> Thursday, Dec 31 </div>
                                     </div>
