--- a/commands.html
+++ b/commands.html
@@ -181,6 +181,8 @@
                 <p><strong>!steam</strong> - Show my Steam ID</p>
                 <p><strong>!uplay</strong> - Show my Ubisoft ID</p>
                 <p><strong>!origin</strong> - Show my Origin ID</p>
+                <p><strong>!kappa</strong> - Show emote on overlay</p>
+                <p><strong>!pogchamp</strong> - Show emote on overlay</p>
             </section>
             <!-- Footer -->
             <footer class="youplay-footer youplay-footer-parallax">
