--- a/index.html
+++ b/index.html
@@ -235,17 +235,9 @@
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Fallout 4</h3>
-                                        <h3>08:00 CST</h3>
-                                        <div> Thursday, Dec 31 </div>
-                                    </div>
-                                </div>
-                                <div class="col-sm-4">
-                                    <div class="feature angled-bg">
-                                        <i class="fa fa-clock"></i>
-                                        <h3>Fallout 4</h3>
+                                        <h3>Anthem</h3>
                                         <h3>05:00 CST</h3>
-                                        <div> Friday, Jan 1 </div>
+                                        <div> Friday, Jan 8 </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
@@ -253,7 +245,15 @@
                                         <i class="fa fa-clock"></i>
                                         <h3>Fallout 4</h3>
                                         <h3>08:00 CST</h3>
-                                        <div> Weekend, Jan 2-3 </div>
+                                        <div> Saturday, Jan 9 </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="feature angled-bg">
+                                        <i class="fa fa-clock"></i>
+                                        <h3>Fallout 4</h3>
+                                        <h3>08:00 CST</h3>
+                                        <div> Sunday, Jan 10 </div>
                                     </div>
                                 </div>
                             </div>
