--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>ClassicCaleb | Casual Friendly Gaming and Tech</title>
+        <title>Tutorials | Tech | Gaming</title>
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@ClassicCalebTV">
-        <meta name="twitter:title" content="ClassicCaleb | Tutorials|Tech|Gaming">
+        <meta name="twitter:title" content="Tutorials | Tech | Gaming">
         <meta name="twitter:description" content="I started making content because of an interest in geeking out with streaming technology and gaming. I continue because of the amazing people that come together!">
         <meta name="twitter:image" content="https://raw.githubusercontent.com/crankycaleb/crankycaleb.github.io/main/assets/images/twitcardLRG.png">
         <meta name="twitter:creator" content="@classiccalebtv">
-        <meta name="description" content="ClassicCaleb | Tutorials|Tech|Gaming">
+        <meta name="description" content="Tutorials | Tech | Gaming">
         <meta name="keywords" content="gaming, game, community, template, html, bootstrap, webpack">
         <meta name="author" content="ClassicCaleb">
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -168,7 +168,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-8">
-                                    <h1 class="h1">Tutorials|Tech|Gaming</h1>
+                                    <h1 class="h1">Tutorials | Tech | Gaming</h1>
                                     <p class="lead"> I started making content because of an interest in geeking out with streaming technology and gaming. I continue because of the amazing people that come together. We share knowledge with one another and make each other better at both gaming and tech. Everyone that shows respect to others is welcome! </p>
                                     <br>
                                     <a class="btn btn-info active" href="#schedule"><i class="fa fa-calendar"></i>&nbsp; Schedule</a>
