--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@
                     <div class="col-md-8 col-md-offset-2">
                         <div class="row vertical-gutter">
                             <div class="col-sm-6">
-                                <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw" target="_blank"><img src="assets/images/ccPLAYS300.png" alt=""></a>
+                                <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw" target="_blank"><img src="assets/images/CCstreams.png" alt=""></a>
                             </div>
  
                             <div class="col-sm-6">
-                                <a href="https://www.youtube.com/channel/UCAmwh0HLg-1K3isUA02RYqw" target="_blank"><img src="assets/images/ccSTREAMTECH300.png" alt=""></a>
+                                <a href="https://www.youtube.com/StreamTechTV" target="_blank"><img src="assets/images/ccSTREAMTECH300.png" alt=""></a>
                             </div>
                         </div>
                     </div>
