--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <div class="col-md-8 col-md-offset-2">
                         <div class="row vertical-gutter">
                             <div class="col-sm-6">
-                                <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw" target="_blank"><img src="assets/images/CCstreams.png" alt=""></a>
+                                <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw" target="_blank"><img src="assets/images/CCstreams2.png" alt=""></a>
                             </div>
  
                             <div class="col-sm-6">
