--- a/streaming/index.html
+++ b/streaming/index.html
@@ -6,7 +6,7 @@
   <meta name="twitter:site" content="@classiccalebtv" />
   <meta name="twitter:creator" content="@classiccalebtv" />
    <meta property="og:url" content="https://classiccaleb.pro/streaming" />
-    <meta property="og:title" content="ClassicCaleb Plays" />
+    <meta property="og:title" content="ClassicCaleb Streams" />
     <meta property="og:description" content="Casual and people focused high fidelity streaming on Youtube. Streams, Clips, and Highlights." />
     <meta property="og:image" content="https://raw.githubusercontent.com/crankycaleb/pro/master/images/yttwitcard.jpg" />
       <meta http-equiv = "refresh" content = "0; url = https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw" />
