--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
                 </div>
             </form>
         </div>
+<a rel="me" href="https://mastodon.online/@classiccaleb">Mastodon</a>
         <!-- /Search Block -->
         <!-- START: Scripts -->
         <!-- Object Fit Polyfill -->
