--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <div class="feature angled-bg">
                         <i class="fa fa-youtube-play"></i>
                         <h3>Youtube</h3>
-                        <div> Two channels! Streaming on ClassicCaleb Streams, tech videos on Stream Tech! </div>
+                        <div> Two channels! Streaming on ClassicCaleb Streams, tech videos on StreamTechTV! </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -214,7 +214,7 @@
                             </div>
  
                             <div class="col-sm-6">
-                                <a href="https://www.youtube.com/StreamTechTV" target="_blank"><img src="assets/images/ccSTREAMTECH300.png" alt=""></a>
+                                <a href="https://www.youtube.com/StreamTechTV" target="_blank"><img src="assets/images/StreamTechTV300.png" alt=""></a>
                             </div>
                         </div>
                     </div>
