--- a/commands.html
+++ b/commands.html
@@ -165,6 +165,7 @@
                 <p><strong>!badumtss</strong> - Plays a comedic drum (5 pts)</p>
                 <p><strong>!dundundun</strong> - Plays a plot twist sound (5 pts)</p>
                 <p><strong>!gg</strong> - Plays OG Fallout success music (5 pts)</p>
+                <p><strong>!nuke</strong> - Fallout 76: Plays Nuke Launched sound (5 pts)</p>
                 <p><strong>!rip</strong> - Plays video game death sound (5 pts)</p>
                 <p><strong>!sadtrombone</strong> - Plays sad trombone music (5 pts)</p>
                 <p><strong>!works</strong> - Todd Howard "it just works" (5 pts)</p>
