--- a/commands.html
+++ b/commands.html
@@ -184,6 +184,7 @@
                 <p><strong>!origin</strong> - Show my Origin ID</p>
                 <p><strong>!kappa</strong> - Show emote on overlay</p>
                 <p><strong>!pogchamp</strong> - Show emote on overlay</p>
+                <p><strong>!zoom</strong> - Zoom the facecam</p>    
             </section>
             <!-- Footer -->
             <footer class="youplay-footer youplay-footer-parallax">
