--- a/index.html
+++ b/index.html
@@ -235,9 +235,17 @@
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Fallout 4</h3>
+                                        <h3>Division 2</h3>
                                         <h3>05:00 CST</h3>
-                                        <div> Friday, Jan 15 </div>
+                                        <div> Friday, Jan 22 </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4">
+                                    <div class="feature angled-bg">
+                                        <i class="fa fa-clock"></i>
+                                        <h3>Division 2</h3>
+                                        <h3>08:00 CST</h3>
+                                        <div> Saturday, Jan 23 </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
@@ -245,15 +253,7 @@
                                         <i class="fa fa-clock"></i>
                                         <h3>Fallout 4</h3>
                                         <h3>08:00 CST</h3>
-                                        <div> Saturday, Jan 16 </div>
-                                    </div>
-                                </div>
-                                <div class="col-sm-4">
-                                    <div class="feature angled-bg">
-                                        <i class="fa fa-clock"></i>
-                                        <h3>Fallout 4</h3>
-                                        <h3>08:00 CST</h3>
-                                        <div> Sunday, Jan 17 </div>
+                                        <div> Sunday, Jan 24 </div>
                                     </div>
                                 </div>
                             </div>
