--- a/index.html
+++ b/index.html
@@ -235,25 +235,25 @@
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Anthem</h3>
+                                        <h3>Division 2</h3>
                                         <h3>05:00 CST</h3>
-                                        <div> Friday, Jan 29 </div>
+                                        <div> Friday, Feb 5 </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
                                         <h3>Fallout 4</h3>
-                                        <h3>06:00 CST</h3>
-                                        <div> Saturday, Jan 30 </div>
+                                        <h3>08:00 CST</h3>
+                                        <div> Saturday, Feb 6 </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Fallout 76</h3>
+                                        <h3>ESO</h3>
                                         <h3>08:00 CST</h3>
-                                        <div> Sunday, Jan 31 </div>
+                                        <div> Sunday, Feb 7 </div>
                                     </div>
                                 </div>
                             </div>
