--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                                     </a>
                                 </div>
                                 <div class="social-icon">
-                                    <a href="https://www.youtube.com/channel/UCAmwh0HLg-1K3isUA02RYqw">
+                                    <a href="https://www.youtube.com/StreamTechTV">
                                         <i class="fab fa-youtube"></i>
                                         <span>Videos on Youtube</span>
                                     </a>
