--- a/index.html
+++ b/index.html
@@ -235,25 +235,24 @@
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Division 2</h3>
-                                        <h3>05:00 CST</h3>
-                                        <div> Friday, Feb 5 </div>
+                                        <h3>Weekdays</h3>
+                                        <h3>05:45 CST</h3>
+                                        <div> Monday-Friday </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>Fallout 76</h3>
+                                        <h3>Weekends</h3>
                                         <h3>08:00 CST</h3>
-                                        <div> Saturday, Feb 6 </div>
+                                        <div> Saturday-Sunday </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
-                                        <h3>ESO</h3>
-                                        <h3>08:00 CST</h3>
-                                        <div> Sunday, Feb 7 </div>
+                                        <h3>Upcoming Game</h3>
+                                        <a class="btn btn-info active" href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw"><i class="fa fa-youtube-play"></i>&nbsp; Posted Here</a>
                                     </div>
                                 </div>
                             </div>
