--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                     <div class="feature angled-bg">
                                         <i class="fa fa-clock"></i>
                                         <h3>Upcoming Game</h3>
-                                        <a class="btn btn-info active" href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw"><i class="fa fa-calendar"></i>&nbsp; Posted Here</a>
+                                        <a class="btn btn-info active" href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw">&nbsp; Posted Here</a>
                                     </div>
                                 </div>
                             </div>
