--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="feature angled-bg">
-                                        <i class="fa fa-clock"></i>
+                                        <i class="fa fa-youtube-play"></i>
                                         <h3>Upcoming Game</h3>
                                         <a class="btn btn-info active" href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw">&nbsp; Posted Here</a>
                                     </div>
