--- a/commands.html
+++ b/commands.html
@@ -172,8 +172,7 @@
                 </div>
                 <div class="col-sm-6">
                 <h2 class="mt-0">Regular Commands</h2>
-                <p><strong>!points</strong> - Check your points and ranking</p>
-                <p><strong>!toppoints</strong> - Show top 10 leaderboard</p>
+                <p><strong>!rank</strong> - Check your ranking</p>
                 <p><strong>!clip</strong> - Clip the last 45 seconds</p>
                 <p><strong>!replay</strong> - replay the last clip on stream</p>
                 <p><strong>!lurk</strong> - Obligatory lurk command</p>
