--- a/commands.html
+++ b/commands.html
@@ -85,6 +85,11 @@
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
+                            <a href="https://botisimo.com/u/classiccaleb/leaderboard/global"> Leaderboard <span class="label"></span>
+                                <span class="label">community</span>
+                            </a>
+                        </li
+                        <li class=" dropdown dropdown-hover">
                             <a href="https://www.patreon.com/ClassicCaleb"> Patreon <span class="label"></span>
                                 <span class="label">support</span>
                             </a>
