--- a/index.html
+++ b/index.html
@@ -111,6 +111,35 @@
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Platforms <span class="caret"></span>
+                                <span class="label">my links</span>
+                            </a>
+                            <div class="dropdown-menu">
+                                <ul role="menu">
+                                    <li>
+                                        <a href="https://discord.gg/GMTGJwX"> Discord </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://twitter.com/ClassicCalebTV"> Twitter </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://trovo.live/ClassicCaleb"> Trovo </a>
+                                    </li>
+                                </ul>
+                                <ul role="menu">
+                                    <li>
+                                        <a href="https://www.twitch.tv/classiccaleb"> Twitch </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw"> Youtube Live </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.youtube.com/StreamTechTV"> YT StreamTechTV </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class=" dropdown dropdown-hover">
                             <a href="https://pcpartpicker.com/user/classiccaleb/saved/#view=dZLgbv"> Specs <span class="label"></span>
                                 <span class="label">parts</span>
                             </a>
