--- a/index.html
+++ b/index.html
@@ -106,13 +106,8 @@
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
-                            <a href="https://www.patreon.com/ClassicCaleb"> Patreon <span class="label"></span>
-                                <span class="label">support</span>
-                            </a>
-                        </li>
-                        <li class=" dropdown dropdown-hover">
                             <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Platforms <span class="caret"></span>
-                                <span class="label">my links</span>
+                                <span class="label">find me</span>
                             </a>
                             <div class="dropdown-menu">
                                 <ul role="menu">
