--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
-                            <a href="commands.html"> Commands <span class="label"></span>
-                                <span class="label">crankybot</span>
+                            <a href="https://botisimo.com/u/classiccaleb/commands"> Commands <span class="label"></span>
+                                <span class="label">botisimo</span>
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
