--- a/tip.html
+++ b/tip.html
@@ -68,14 +68,48 @@
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
-                            <a href="commands.html"> Commands <span class="label"></span>
-                                <span class="label">crankybot</span>
+                            <a href="https://botisimo.com/u/classiccaleb/commands"> Commands <span class="label"></span>
+                                <span class="label">botisimo</span>
                             </a>
                         </li>
                         <li class=" dropdown dropdown-hover">
                             <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%69%6E%66%6F%40%63%6C%61%73%73%69%63%63%61%6C%65%62%2E%70%72%6F"> Contact <span class="label"></span>
                                 <span class="label">email</span>
                             </a>
+                        </li>
+                        <li class=" dropdown dropdown-hover">
+                            <a href="https://botisimo.com/u/classiccaleb/leaderboard/global"> Leaderboard <span class="label"></span>
+                                <span class="label">community</span>
+                            </a>
+                        </li>
+                        <li class=" dropdown dropdown-hover">
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> Platforms <span class="caret"></span>
+                                <span class="label">find me</span>
+                            </a>
+                            <div class="dropdown-menu">
+                                <ul role="menu">
+                                    <li>
+                                        <a href="https://discord.gg/GMTGJwX"> Discord </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://twitter.com/ClassicCalebTV"> Twitter </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://trovo.live/ClassicCaleb"> Trovo </a>
+                                    </li>
+                                </ul>
+                                <ul role="menu">
+                                    <li>
+                                        <a href="https://www.twitch.tv/classiccaleb"> Twitch </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw"> Youtube Live </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.youtube.com/StreamTechTV"> YT StreamTechTV </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                         <li class=" dropdown dropdown-hover">
                             <a href="https://pcpartpicker.com/user/classiccaleb/saved/#view=dZLgbv"> Specs <span class="label"></span>
