--- a/tip.html
+++ b/tip.html
@@ -179,7 +179,7 @@
                                 <div class="info container align-center">
                     <div>
                         <h2>Ok fine, here's the real button</h2><br><br>
-                        <a class="btn btn-info" href="https://streamlabs.com/classiccalebplays/tip">Tip</a>
+                        <a class="btn btn-info" href="https://botisimo.com/u/classiccaleb/donate">Tip</a>
                     </div>
                 </div>
                                 </form>
