--- a/index.html
+++ b/index.html
@@ -313,9 +313,9 @@
                 <div class="info container align-center">
                     <div>
                         <h2>Thanks for your support!</h2>
-                        <em class="lead">Never expected, always appreciated! You can now subscribe on Patreon for $4!</a></em>
+                        <em class="lead">Never expected, always appreciated!</a></em>
                         <br><br><br><br>
-                        <a class="btn btn-info" href="https://www.patreon.com/ClassicCaleb">Subscribe</a>
+                        <a class="btn btn-info" href="tip.html">Subscribe</a>
                     </div>
                 </div>
             </section>
