--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                         <h2>Thanks for your support!</h2>
                         <em class="lead">Never expected, always appreciated!</a></em>
                         <br><br><br><br>
-                        <a class="btn btn-info" href="tip.html">Subscribe</a>
+                        <a class="btn btn-info" href="tip.html">Tip</a>
                     </div>
                 </div>
             </section>
