--- a/fallout-builds.html
+++ b/fallout-builds.html
@@ -3,10 +3,33 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Youplay | Blog 3</title>
-        <meta name="description" content="Youplay - Gaming HTML Template based on Bootstrap">
+         <title>Tutorials | Tech | Gaming</title>
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:site" content="@ClassicCalebTV">
+        <meta name="twitter:title" content="Tutorials | Tech | Gaming">
+        <meta name="twitter:description" content="I started making content because of an interest in geeking out with streaming technology and gaming. I continue because of the amazing people that come together!">
+        <meta name="twitter:image" content="https://raw.githubusercontent.com/crankycaleb/crankycaleb.github.io/main/assets/images/twitcardLRG.png">
+        <meta name="twitter:creator" content="@classiccalebtv">
+        <meta name="description" content="Tutorials | Tech | Gaming">
         <meta name="keywords" content="gaming, game, community, template, html, bootstrap, webpack">
-        <meta name="author" content="nK">
+        <meta name="author" content="ClassicCaleb">
+        <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff">
         <link rel="icon" type="image/png" href="assets/images/dark/icon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- START: Styles -->
