--- a/fallout-builds.html
+++ b/fallout-builds.html
@@ -194,7 +194,7 @@
                 <div class="info">
                     <div>
                         <div class="container">
-                            <h1 class="h1">Blog</h1>
+                            <h1 class="h1">Fallout 76 Builds</h1>
                         </div>
                     </div>
                 </div>
@@ -206,13 +206,13 @@
                     <!-- Single News Block -->
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="news-one">
-                            <a href="blog-post-1.html" class="angled-img">
+                            <a href="https://youtube.com/videolink" class="angled-img">
                                 <div class="img img-offset">
                                     <img src="assets/images/dark/game-bloodborne-500x375.jpg" alt="">
                                 </div>
                                 <div class="bottom-info align-center">
-                                    <h3>Bloodborne - First Try!</h3>
-                                    <span class="date"><i class="fa fa-calendar"></i> Today</span>
+                                    <h3>Full Health Commando</h3>
+                                    <span class="date"><i class="fa fa-youtube-play"></i>ClassicCaleb Streams</span>
                                 </div>
                             </a>
                         </div>
@@ -258,66 +258,6 @@
                                 <div class="bottom-info align-center">
                                     <h3>The Witcher, 60% Off</h3>
                                     <span class="date"><i class="fa fa-calendar"></i> February 19, 2020</span>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- /Single News Block -->
-                    <!-- Single News Block -->
-                    <div class="col-lg-3 col-md-4 col-sm-6">
-                        <div class="news-one">
-                            <a href="#" class="angled-img">
-                                <div class="img img-offset">
-                                    <img src="assets/images/dark/game-middle-eart-shadow-of-mordor-500x375.jpg" alt="">
-                                </div>
-                                <div class="bottom-info align-center">
-                                    <h3>Whats New in Middle-earth</h3>
-                                    <span class="date"><i class="fa fa-calendar"></i> February 2, 2020</span>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- /Single News Block -->
-                    <!-- Single News Block -->
-                    <div class="col-lg-3 col-md-4 col-sm-6">
-                        <div class="news-one">
-                            <a href="#" class="angled-img">
-                                <div class="img img-offset">
-                                    <img src="assets/images/dark/game-soul-sacrifice-500x375.jpg" alt="">
-                                </div>
-                                <div class="bottom-info align-center">
-                                    <h3>Soul Sacrifice Review</h3>
-                                    <span class="date"><i class="fa fa-calendar"></i> January 27, 2020</span>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- /Single News Block -->
-                    <!-- Single News Block -->
-                    <div class="col-lg-3 col-md-4 col-sm-6">
-                        <div class="news-one">
-                            <a href="#" class="angled-img">
-                                <div class="img img-offset">
-                                    <img src="assets/images/dark/game-diablo-iii-500x375.jpg" alt="">
-                                </div>
-                                <div class="bottom-info align-center">
-                                    <h3>Let's Grind Diablo III</h3>
-                                    <span class="date"><i class="fa fa-calendar"></i> January 18, 2020</span>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- /Single News Block -->
-                    <!-- Single News Block -->
-                    <div class="col-lg-3 col-md-4 col-sm-6">
-                        <div class="news-one">
-                            <a href="#" class="angled-img">
-                                <div class="img img-offset">
-                                    <img src="assets/images/dark/game-dragons-dogma-500x375.jpg" alt="">
-                                </div>
-                                <div class="bottom-info align-center">
-                                    <h3>Let us Remember Dragons Dogma</h3>
-                                    <span class="date"><i class="fa fa-calendar"></i> January 10, 2020</span>
                                 </div>
                             </a>
                         </div>
