--- a/fallout-builds.html
+++ b/fallout-builds.html
@@ -206,13 +206,13 @@
                     <!-- Single News Block -->
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="news-one">
-                            <a href="https://youtube.com/videolink" class="angled-img">
+                            <a href="https://www.youtube.com/channel/UCnB8rIviGnWoMaa2VCitiYw" class="angled-img">
                                 <div class="img img-offset">
                                     <img src="assets/images/dark/game-bloodborne-500x375.jpg" alt="">
                                 </div>
                                 <div class="bottom-info align-center">
                                     <h3>Full Health Commando</h3>
-                                    <span class="date"><i class="fa fa-youtube-play"></i>ClassicCaleb Streams</span>
+                                    <span class="date"><i class="fa fa-youtube-play"></i> ClassicCaleb Streams</span>
                                 </div>
                             </a>
                         </div>
@@ -221,13 +221,13 @@
                     <!-- Single News Block -->
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="news-one">
-                            <a href="blog-post-2.html" class="angled-img">
+                            <a href="placeholder.html" class="angled-img">
                                 <div class="img img-offset">
                                     <img src="assets/images/dark/game-dark-souls-ii-500x375.jpg" alt="">
                                 </div>
                                 <div class="bottom-info align-center">
-                                    <h3>Coming to Youplay - Dark Souls II</h3>
-                                    <span class="date"><i class="fa fa-calendar"></i> March 9, 2020</span>
+                                    <h3>Placeholder Build</h3>
+                                    <span class="date"><i class="fa fa-youtube-play"></i> Awesome User</span>
                                 </div>
                             </a>
                         </div>
@@ -241,8 +241,8 @@
                                     <img src="assets/images/dark/game-kingdoms-of-amalur-reckoning-500x375.jpg" alt="">
                                 </div>
                                 <div class="bottom-info align-center">
-                                    <h3>Review Kingdoms of Amalur</h3>
-                                    <span class="date"><i class="fa fa-calendar"></i> March 1, 2020</span>
+                                    <h3>Placeholder Build</h3>
+                                    <span class="date"><i class="fa fa-youtube-play"></i> Awesome User</span>
                                 </div>
                             </a>
                         </div>
@@ -256,8 +256,8 @@
                                     <img src="assets/images/dark/game-the-witcher-500x375.jpg" alt="">
                                 </div>
                                 <div class="bottom-info align-center">
-                                    <h3>The Witcher, 60% Off</h3>
-                                    <span class="date"><i class="fa fa-calendar"></i> February 19, 2020</span>
+                                    <h3>Placeholder Build</h3>
+                                    <span class="date"><i class="fa fa-youtube-play"></i> Awesome User</span>
                                 </div>
                             </a>
                         </div>
